--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Daniel Ice <dice@coderguy.com> (http://coderguy.com)",
   "name": "demandware-convert",
   "description": "Convert between Demandware XML format and CSV/TSV.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "homepage": "https://github.com/coderguy/demandware-convert",
   "repository": {
     "type": "git",
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "ya-csv": "0.9.x",
-    "underscore": "~1.3.3",
-    "libxmljs": "0.x.x"
+    "underscore": "1.x.x",
+    "optimist": "0.3.x",
+    "dustfs": "0.0.6"
   },
   "devDependencies": {
     "mocha": "1.2.x",
